objects/FieloCRUD__PageComponent__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__AdditionalCSSClasses__c</fullName>
        <label>Additional CSS Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__CSSContent__c</fullName>
        <label>CSS Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldApiName__c</fullName>
        <label>Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldLookupFieldToShow__c</fullName>
        <defaultValue>&apos;Name&apos;</defaultValue>
        <inlineHelpText>Define the field API name (from the related object) that will be displayed on the picklist.</inlineHelpText>
        <label>Field To Show In Picklist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldLookupWhereCondition__c</fullName>
        <inlineHelpText>Define your WHERE condition clause for the object related through the lookup. You may include fields; ORDER BY and LIMIT clauses; and variables for Member Id, Account Id, Contact Id, UserId (ex. Member__c =: memberId)</inlineHelpText>
        <label>Where Condition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldType__c</fullName>
        <inlineHelpText>Este campo se completa automáticamente por trigger</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FileUploadMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Upload Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HTMLCode__c</fullName>
        <label>HTML Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HTMLContent__c</fullName>
        <label>HTML Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HTMLEscape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTML Escape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Height__c</fullName>
        <defaultValue>&apos;1000px&apos;</defaultValue>
        <inlineHelpText>Complete with the number of pixels. Ex &quot;100px&quot;</inlineHelpText>
        <label>Height</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HideLabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__JSCode__c</fullName>
        <label>JS Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LimitAttachments__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Limit Attachments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Navigation__c</fullName>
        <label>Navigation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Navigate</fullName>
                    <default>true</default>
                    <label>Navigate</label>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>No page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__ObjectAPIName__c</fullName>
        <inlineHelpText>Complete with the Object API name of the records that you want to add through the page layout.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PageName__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PageSection__c</fullName>
        <label>Page Section</label>
        <referenceTo>FieloCRUD__PageSection__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>PageComponents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PageSize__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ParentField__c</fullName>
        <inlineHelpText>Complete with the API name of the lookup field that relates the object defined on &quot;Object API Name&quot; with the object setting of the page layout.</inlineHelpText>
        <label>Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PicklistYear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows a year picklist on date fields</description>
        <inlineHelpText>Shows a year picklist on date fields</inlineHelpText>
        <label>Picklist Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SearchEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SearchFieldSet__c</fullName>
        <inlineHelpText>Define which columns (field API names separated by comma) are going to be display in the search table and in which order.</inlineHelpText>
        <label>Search FieldSet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SearchableFieldAPIName__c</fullName>
        <inlineHelpText>Complete with the API name of the lookup field that references the Object that is going to be query.</inlineHelpText>
        <label>Searchable Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SearchableFieldsAPIName__c</fullName>
        <inlineHelpText>Define by which fields (API names separated by comma) the user can search records for. The fields must be related to the object obtained through the &quot;Searchable Field API Name&quot; field.</inlineHelpText>
        <label>Searchable Fields API Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ShowDelete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__TabIndex__c</fullName>
        <inlineHelpText>Specifies the tab order of the field (when the &quot;tab&quot; button is used for navigating).</inlineHelpText>
        <label>Tab Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__UploadFilesAutomatically__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Upload Files Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Visibility__c</fullName>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__Width__c</fullName>
        <defaultValue>&apos;100%&apos;</defaultValue>
        <inlineHelpText>Complete with the number of pixels or percentage. Ex &quot;100px&quot;, &quot;100%&quot;</inlineHelpText>
        <label>Width</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__YearRange__c</fullName>
        <inlineHelpText>Set the range of years for the picklist with the format XXXX:YYYY</inlineHelpText>
        <label>Year Range</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Page Component</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Page Component #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Components</pluralLabel>
    <recordTypes>
        <fullName>FieloCRUD__BlankSpace</fullName>
        <active>true</active>
        <description>Allows to add blank spaces between fields.</description>
        <label>Blank Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__CustomComponentField</fullName>
        <active>true</active>
        <description>Allows to add a custom apex component for a field</description>
        <label>Custom Component Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__Field</fullName>
        <active>true</active>
        <description>Allows to display fields from the object setting related to this page layout.</description>
        <label>Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__FileUpload</fullName>
        <active>true</active>
        <description>Allows members to add attachments. Is only visible in &quot;Edit&quot; mode.</description>
        <label>File Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__HTMLContent</fullName>
        <active>true</active>
        <description>Displays HTML content. Ex.: Instructions on how to create a record.</description>
        <label>HTML Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__RelatedDetails</fullName>
        <active>true</active>
        <description>Allows to create/edit child records of the object defined in the object setting through the editable mode of the page layout.</description>
        <label>Related Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__iFrame</fullName>
        <active>true</active>
        <description>Allows to include a custom page/component within the page layout.</description>
        <label>iFrame</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloCRUD__PageComponent_FieldToShowMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>FieloCRUD__FieldType__c = &apos;lookup&apos; 
&amp;&amp; 
ISNULL(FieloCRUD__FieldLookupWhereCondition__c)</errorConditionFormula>
        <errorDisplayField>FieloCRUD__FieldLookupFieldToShow__c</errorDisplayField>
        <errorMessage>You must include a value (ex. name) when field type is &quot;Lookup&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCRUD__PageComponent_RequiredReadOnly</fullName>
        <active>true</active>
        <errorConditionFormula>FieloCRUD__ReadOnly__c = TRUE
&amp;&amp;
FieloCRUD__Required__c = TRUE</errorConditionFormula>
        <errorMessage>Required and Read Only fields cannot be checked at the same time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCRUD__PageComponent_WhereOnlyInLookupFields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	FieloCRUD__FieldType__c != &apos;lookup&apos;,
	RecordType.DeveloperName != &apos;RelatedDetails&apos;,
	NOT(ISBLANK(FieloCRUD__FieldLookupWhereCondition__c))
)</errorConditionFormula>
        <errorDisplayField>FieloCRUD__FieldLookupWhereCondition__c</errorDisplayField>
        <errorMessage>Field &quot;Where Condition&quot; can only be completed when field type is &quot;Lookup&quot; or record type is &quot;Related Details&quot;.</errorMessage>
    </validationRules>
</CustomObject>